--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -88,25 +88,25 @@
 <br>
 <div class="catalog">
   <div class="women_underwear">
-    <a href="assets/Pigiama_gimp_out_label.png" data-fancybox data-caption="Цена - 330грн<br> code: 3001
+    <a href="assets/Pigiama_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3001
 			"><img src="assets/Pigiama_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3001</h4>
   </div>
   <div class="women_underwear">
-    <a href="assets/Pigiama2_gimp_out_label.png" data-fancybox data-caption="Цена - 330грн<br> code: 3002
+    <a href="assets/Pigiama2_gimp_out_label.png" data-fancybox="gallery"data-fancybox data-caption="Цена - 330грн<br> code: 3002
 			"><img src="assets/Pigiama2_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3002</h4>
   </div>
   <div class="women_underwear">
-    <a href="assets/Pigiama3_gimp_out_label.png" data-fancybox data-caption="Цена - 330грн<br> code: 3003
+    <a href="assets/Pigiama3_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3003
 			"><img src="assets/Pigiama3_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3003</h4>
   </div>
   <div class="women_underwear">
-    <a href="assets/Pigiama4_gimp_out_label.png" data-fancybox data-caption="Цена - 390грн<br> code: 3025
+    <a href="assets/Pigiama4_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 390грн<br> code: 3025
 			"><img src="assets/Pigiama4_gimp_out_label.png" alt="photo"/></a>
     <h3>390 грн</h3>
     <h4>code: 3025</h4>
@@ -121,7 +121,7 @@
 <br>
 <div class="catalog">
   <div class="women_t_shirts">
-    <a href="assets/female_T-shirt1_2011_white_S_M_L_XL_80__2XXL_85grn.png" data-fancybox data-caption="
+    <a href="assets/female_T-shirt1_2011_white_S_M_L_XL_80__2XXL_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Белый Цвет и На Размеры: S-M-L-XL -> Цена - 85грн
     <br>
     На Белый Цвет и На Размер: 2XXL -> Цена - 85грн
@@ -133,7 +133,7 @@
   </div>
 
   <div class="women_t_shirts">
-    <a href="assets/female_T-shirt1_2016_Red_S_M_L_XL_80grn.png" data-fancybox data-caption="
+    <a href="assets/female_T-shirt1_2016_Red_S_M_L_XL_80grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Красный Цвет и На Размеры: S-M-L-XL -> Цена - 80грн
     <br>
     code: 2016
@@ -143,7 +143,7 @@
   </div>
 
   <div class="women_t_shirts">
-    <a href="assets/female_T-shirt1_2037_White_3XL_90__2XXL_85grn.png" data-fancybox data-caption="
+    <a href="assets/female_T-shirt1_2037_White_3XL_90__2XXL_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
      На Белый Цвет и На Размер: 2XXL -> Цена - 85грн
     <br>
      На Белый Цвет и На Размер: 3XL -> Цена - 90грн
@@ -155,7 +155,7 @@
   </div>
 
   <div class="women_t_shirts">
-    <a href="assets/female_T-shirt1_2127_White_S_M_L_XL_95grn.png" data-fancybox data-caption="
+    <a href="assets/female_T-shirt1_2127_White_S_M_L_XL_95grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Белый Цвет и На Размеры: S-M-L-XL -> Цена - 95грн
     <br>
     code: 2127
@@ -171,28 +171,31 @@
 <br>
 <div class="catalog">
   <div class="men_underwear">
-    <a href="assets/Men1_underwear_4476_black_Dark blue_Burgundy_rose_Purple_Bright blue__Gray_Dark blue_85grn.png" data-fancybox data-caption="
+    <a href="assets/Men1_underwear_4476_black_Dark blue_Burgundy_rose_Purple_Bright blue__Gray_Dark blue_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
     Цена - 85грн на цвета: Черный, Темно-синий, Бордовый, Роза, Фиолетовый, Ярко-синий, Серый, Тёмно-синий <br> code: 4476
 			"><img src="assets/Men1_underwear_4476_black_Dark blue_Burgundy_rose_Purple_Bright blue__Gray_Dark blue_85grn.png" alt="photo"/></a>
     <h3>85 грн</h3>
     <h4>code: 4476</h4>
   </div>
+
   <div class="men_underwear">
-    <a href="assets/Men2_underwear_4480_standart_80grn.png" data-fancybox data-caption="
+    <a href="assets/Men2_underwear_4480_standart_80grn.png" data-fancybox="gallery" data-fancybox data-caption="
      Цена - 80грн, цвет: стандартный<br> code: 4480
 			"><img src="assets/Men2_underwear_4480_standart_80grn.png" alt="photo"/></a>
     <h3>80 грн</h3>
     <h4>code: 4480</h4>
   </div>
+
   <div class="men_underwear">
-    <a href="assets/Men_underwear_4413_standart_120grn.png" data-fancybox data-caption="
+    <a href="assets/Men_underwear_4413_standart_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
     Цена - 80грн, цвет: стандартный<br> code: 4480
 			"><img src="assets/Men_underwear_4413_standart_120grn.png" alt="photo"/></a>
     <h3>120 грн</h3>
     <h4>code: 4413</h4>
   </div>
+
   <div class="men_underwear">
-    <a href="assets/Men_underwear_4416_dark blue_85grn.png" data-fancybox data-caption="
+    <a href="assets/Men_underwear_4416_dark blue_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
     Цена - 85грн, цвет: Темно Синий<br> code: 4416
 			"><img src="assets/Men_underwear_4416_dark blue_85grn.png" alt="photo"/></a>
     <h3>85 грн</h3>
@@ -207,7 +210,7 @@
 <br>
 <div class="catalog">
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11255_25grn.png" data-fancybox data-caption="
+    <a href="assets/Women_underwear_11255_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: L-M -> Цена - 25грн
     <br>
     code: 11255
@@ -217,7 +220,7 @@
   </div>
 
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11257_L_M_35grn.png" data-fancybox data-caption="
+    <a href="assets/Women_underwear_11257_L_M_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: L-M -> Цена - 35грн
     <br>
     code: 11257
@@ -227,7 +230,7 @@
   </div>
 
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11258_L_M_35grn.png" data-fancybox data-caption="
+    <a href="assets/Women_underwear_11258_L_M_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: L-M -> Цена - 35грн
     <br>
     code: 11258
@@ -237,7 +240,7 @@
   </div>
 
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11259_S_M_L_XL_40grn.png" data-fancybox data-caption="
+    <a href="assets/Women_underwear_11259_S_M_L_XL_40grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: S-M-L-XL -> Цена - 40грн
     <br>
     code: 11259
@@ -280,9 +283,9 @@
     <p>ВС: 10:00 - 17:00</p>
   </div>
 </footer>
-<!--<script src="assets/jquery.js" type="text/javascript"></script>-->
-<!--<script src="assets/slick.min.js" type="text/javascript"></script>-->
-<!--<script src="assets/jquery.fancybox.js" type="text/javascript"></script>-->
-<!--<script src="assets/script.js" type="text/javascript"></script>-->
+<script src="assets/jquery.js" type="text/javascript"></script>
+<script src="assets/slick.min.js" type="text/javascript"></script>
+<script src="assets/jquery.fancybox.js" type="text/javascript"></script>
+<script src="assets/script.js" type="text/javascript"></script>
 </body>
 </html>
