--- a/app/views/static_pages/womens_underwear.html.erb
+++ b/app/views/static_pages/womens_underwear.html.erb
@@ -9,8 +9,10 @@
 
 <br>
 <div class="catalog">
+
+  <!--1-->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11255_25grn.png" data-fancybox data-caption="
+    <a href="assets/Women_underwear_11255_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: L-M -> Цена - 25грн
     <br>
     code: 11255
@@ -19,8 +21,9 @@
     <h4>code: 11255</h4>
   </div>
 
+  <!--2-->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11257_L_M_35grn.png" data-fancybox data-caption="
+    <a href="assets/Women_underwear_11257_L_M_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: L-M -> Цена - 35грн
     <br>
     code: 11257
@@ -29,8 +32,9 @@
     <h4>code: 11257</h4>
   </div>
 
+<!--3  -->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11258_L_M_35grn.png" data-fancybox data-caption="
+    <a href="assets/Women_underwear_11258_L_M_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: L-M -> Цена - 35грн
     <br>
     code: 11258
@@ -39,8 +43,9 @@
     <h4>code: 11258</h4>
   </div>
 
+<!--4-->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11259_S_M_L_XL_40grn.png" data-fancybox data-caption="
+    <a href="assets/Women_underwear_11259_S_M_L_XL_40grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: S-M-L-XL -> Цена - 40грн
     <br>
     code: 11259
@@ -49,6 +54,511 @@
     <h4>code: 11259</h4>
   </div>
 
+<!--5  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11260_M_L_30grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 30грн
+    <br>
+    code: 11260
+			"><img src="assets/Women_underwear_11260_M_L_30grn.png" alt="photo"/></a>
+    <h3>40 грн</h3>
+    <h4>code: 11260</h4>
+  </div>
+
+<!--6  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11265_M_L_40grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 40грн
+    <br>
+    code: 11265
+			"><img src="assets/Women_underwear_11265_L_M_40grn.png" alt="photo"/></a>
+    <h3>40 грн</h3>
+    <h4>code: 11265</h4>
+  </div>
+
+<!--7  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11282_L_M _30grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 30грн
+    <br>
+    code: 11265
+			"><img src="assets/Women_underwear_11282_L_M_30grn.png" alt="photo"/></a>
+    <h3>30 грн</h3>
+    <h4>code: 11282</h4>
+  </div>
+
+<!--8  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11294_L_M _30grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 30грн
+    <br>
+    code: 11294
+			"><img src="assets/Women_underwear_11294_L_M_30grn.png" alt="photo"/></a>
+    <h3>30 грн</h3>
+    <h4>code: 11294</h4>
+  </div>
+
+<!--9  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11297_S_M_L_XL_30grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: S-M-L-XL -> Цена - 30грн
+    <br>
+    code: 11297
+			"><img src="assets/Women_underwear_11297_S_M_L_XL_30grn.png" alt="photo"/></a>
+    <h3>30 грн</h3>
+    <h4>code: 11297</h4>
+  </div>
+
+<!--10  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11298_S_M_L_XL_30grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: S-M-L-XL -> Цена - 33грн
+    <br>
+    code: 11298
+			"><img src="assets/Women_underwear_11298_S_M_L_XL_30grn.png" alt="photo"/></a>
+    <h3>33 грн</h3>
+    <h4>code: 11298</h4>
+  </div>
+
+<!--11  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_2077_white_S_M_L_XL_30grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Белый Цвет и на Размеры: S-M-L-XL -> Цена - 25грн
+    <br>
+    code: 2077
+			"><img src="assets/Women_underwear_2077_white_S_M_L_XL_30grn.png" alt="photo"/></a>
+    <h3>25 грн</h3>
+    <h4>code: 2077</h4>
+  </div>
+
+<!--12  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_2080_black_S_M_L_XL_25grn.png" data-fancybox="gallery" data-fancybox="" data-caption="
+    На Черный Цвет и на Размеры: S-M-L-XL -> Цена - 25грн
+    <br>
+    code: 2080
+			"><img src="assets/Women_underwear_2080_black_S_M_L_XL_25grn.png" alt="photo"/></a>
+    <h3>25 грн</h3>
+    <h4>code: 2080</h4>
+  </div>
+
+<!--13  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_2313_white_S_M_L_XL_28grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Белый Цвет и на Размеры: S-M-L-XL -> Цена - 28грн
+    <br>
+    code: 2313
+			"><img src="assets/Women_underwear_2313_white_S_XL_28grn.png" alt="photo"/></a>
+    <h3>28 грн</h3>
+    <h4>code: 2313</h4>
+  </div>
+
+<!--14-->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_4405_Bright_blue_S_M_L_XL_75grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Ярко Синий Цвет и на Размеры: S-M-L-XL -> Цена - 75грн
+    <br>
+    code: 4405
+			"><img src="assets/Women_underwear_4405_Bright_blue_S_XL_75grn.png" alt="photo"/></a>
+    <h3>75 грн</h3>
+    <h4>code: 4405</h4>
+  </div>
+
+<!--15-->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_4406_black_S_M_L_XL_75grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Черный Цвет и на Размеры: S-M-L-XL -> Цена - 70грн
+    <br>
+    code: 4406
+			"><img src="assets/Women_underwear_4406_black_S_XL_75grn.png" alt="photo"/></a>
+    <h3>70 грн</h3>
+    <h4>code: 4406</h4>
+  </div>
+
+<!--16  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_1113_grey_S_M_L_XL_90grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Серый Цвет и на Размеры: S-M-L-XL -> Цена - 70грн
+    <br>
+    code: 1113
+			"><img src="assets/Women_underwear_1113_grey_S_XL_90grn.png" alt="photo"/></a>
+    <h3>90 грн</h3>
+    <h4>code: 1113</h4>
+  </div>
+
+<!--17  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11143_L_M_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: S-M-L-XL -> Цена - 70грн
+    <br>
+    code: 11143
+			"><img src="assets/Women_underwear_11143_L_M_25grn.png" alt="photo"/></a>
+    <h3>25 грн</h3>
+    <h4>code: 11143</h4>
+  </div>
+
+<!--18-->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11148_L_M_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 35грн
+    <br>
+    code: 11148
+			"><img src="assets/Women_underwear_11148_L_M_35grn.png" alt="photo"/></a>
+    <h3>35 грн</h3>
+    <h4>code: 11148</h4>
+  </div>
+
+<!--19  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11184_L_M_30grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 30грн
+    <br>
+    code: 11184
+			"><img src="assets/Women_underwear_11184_L_M_30grn.png" alt="photo"/></a>
+    <h3>30 грн</h3>
+    <h4>code: 11184</h4>
+  </div>
+
+<!--20-->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11185_L_M_33grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 33грн
+    <br>
+    code: 11185
+			"><img src="assets/Women_underwear_11185_L_M_33grn.png" alt="photo"/></a>
+    <h3>33 грн</h3>
+    <h4>code: 11185</h4>
+  </div>
+
+<!--21  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11187_S_M_L_XL_45grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: S-M-L-XL -> Цена - 45грн
+    <br>
+    code: 11187
+			"><img src="assets/Women_underwear_11187_S_M_L_XL_45grn.png" alt="photo"/></a>
+    <h3>45 грн</h3>
+    <h4>code: 11187</h4>
+  </div>
+
+<!--22  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11190_L_M_45grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 45грн
+    <br>
+    code: 11190
+			"><img src="assets/Women_underwear_11190_L_M_45grn.png" alt="photo"/></a>
+    <h3>45 грн</h3>
+    <h4>code: 11190</h4>
+  </div>
+
+<!--23-->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_1119_L_M_100grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Тёмно Синий Цвет и на Размеры: S-M-L-XL -> Цена - 45грн
+    <br>
+    code: 1119
+			"><img src="assets/Women_underwear_black_blue_1119_L_M_100grn.png" alt="photo"/></a>
+    <h3>100 грн</h3>
+    <h4>code: 1119</h4>
+  </div>
+
+<!--24  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11223_L_M_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 25грн
+    <br>
+    code: 11223
+			"><img src="assets/Women_underwear_11223_L_M_25grn.png" alt="photo"/></a>
+    <h3>100 грн</h3>
+    <h4>code: 11223</h4>
+  </div>
+
+<!--25  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11224_L_M_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 25грн
+    <br>
+    code: 11223
+			"><img src="assets/Women_underwear_11224_L_M_25grn.png" alt="photo"/></a>
+    <h3>100 грн</h3>
+    <h4>code: 11223</h4>
+  </div>
+
+<!--26  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11226_L_M_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 25грн
+    <br>
+    code: 11226
+			"><img src="assets/Women_underwear_11226_L_M_25grn.png" alt="photo"/></a>
+    <h3>25 грн</h3>
+    <h4>code: 11226</h4>
+  </div>
+
+<!--27  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11231_L_M_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 25грн
+    <br>
+    code: 11231
+			"><img src="assets/Women_underwear_11231_L_M_25grn.png" alt="photo"/></a>
+    <h3>25 грн</h3>
+    <h4>code: 11231</h4>
+  </div>
+
+<!--28  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11235_S_M_L_XL_50grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: S-M-L-XL -> Цена - 50грн
+    <br>
+    code: 11235
+			"><img src="assets/Women_underwear_11235_S_M_L_XL_50grn.png" alt="photo"/></a>
+    <h3>50 грн</h3>
+    <h4>code: 11235</h4>
+  </div>
+
+<!--29  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11235_M_L_30grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 30грн
+    <br>
+    code: 11236
+			"><img src="assets/Women_underwear_11235_M_L_30grn.png" alt="photo"/></a>
+    <h3>30 грн</h3>
+    <h4>code: 11236</h4>
+  </div>
+
+<!--30  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11235_M_L_30grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 35грн
+    <br>
+    code: 11237
+			"><img src="assets/Women_underwear_11235_M_L_30grn.png" alt="photo"/></a>
+    <h3>35 грн</h3>
+    <h4>code: 11237</h4>
+  </div>
+
+<!--31  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11235_S_M_L_XL_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: S-M-L-XL -> Цена - 35грн
+    <br>
+    code: 11243
+			"><img src="assets/Women_underwear_11235_S_M_L_XL_35grn.png" alt="photo"/></a>
+    <h3>35 грн</h3>
+    <h4>code: 11243</h4>
+  </div>
+
+<!--32  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11245_M_L_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 35грн
+    <br>
+    code: 11245
+			"><img src="assets/Women_underwear_11245_M_L_25grn.png" alt="photo"/></a>
+    <h3>35 грн</h3>
+    <h4>code: 11245</h4>
+  </div>
+
+<!--33  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11249_M_L_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 35грн
+    <br>
+    code: 11249
+			"><img src="assets/Women_underwear_11249_M_L_25grn.png" alt="photo"/></a>
+    <h3>25 грн</h3>
+    <h4>code: 11249</h4>
+  </div>
+
+<!--34  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_white_2127_S_M_L_XL_75grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Белый Цвет и на Размеры: S-M-L-XL -> Цена - 75грн
+    <br>
+    code: 2127
+			"><img src="assets/Women_underwear_white_2127_S_M_L_XL_75grn.png" alt="photo"/></a>
+    <h3>75 грн</h3>
+    <h4>code: 2127</h4>
+  </div>
+
+<!--35  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_white_black_2128_S_M_L_XL_65grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Белый и Черный Цвет, а также на Размеры: S-M-L-XL -> Цена - 65грн
+    <br>
+    code: 2128
+			"><img src="assets/Women_underwear_white_black_2128_S_M_L_XL_65grn.png" alt="photo"/></a>
+    <h3>65 грн</h3>
+    <h4>code: 2128</h4>
+  </div>
+
+<!--36  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_grey_2131_S_M_L_XL_73grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Серый Цвет и на Размеры: S-M-L-XL -> Цена - 73грн
+    <br>
+    code: 2131
+			"><img src="assets/Women_underwear_grey_2131_S_M_L_XL_73grn.png" alt="photo"/></a>
+    <h3>73 грн</h3>
+    <h4>code: 2131</h4>
+  </div>
+
+<!--37  -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_grey_8049_S_M_L_XL_64grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Серый Цвет и на Размеры: S-M-L-XL -> Цена - 64грн
+    <br>
+    code: 8049
+			"><img src="assets/Women_underwear_grey_8049_S_M_L_XL_64grn.png" alt="photo"/></a>
+    <h3>64 грн</h3>
+    <h4>code: 8049</h4>
+  </div>
+
+<!--38 -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_grey_black_1056_S_M_L_XL_64grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Серый и Черный Цвет и на Размеры: S-M-L-XL -> Цена - 50грн
+    <br>
+    code: 1056
+			"><img src="assets/Women_underwear_grey_black_1056_S_M_L_XL_64grn.png" alt="photo"/></a>
+    <h3>50 грн</h3>
+    <h4>code: 1056</h4>
+  </div>
+
+<!--39 -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_black_1078_S_M_L_XL_100grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Черный Цвет и на Размеры: S-M-L-XL -> Цена - 100грн
+    <br>
+    code: 1078
+			"><img src="assets/Women_underwear_black_1078_S_M_L_XL_100grn.png" alt="photo"/></a>
+    <h3>50 грн</h3>
+    <h4>code: 1078</h4>
+  </div>
+
+<!--40 -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_dark_blue_1080_S_M_L_XL_100grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Темно-синий Цвет и на Размеры: S-M-L-XL -> Цена - 100грн
+    <br>
+    code: 1080
+			"><img src="assets/Women_underwear_dark_blue_1080_S_M_L_XL_100grn.png" alt="photo"/></a>
+    <h3>50 грн</h3>
+    <h4>code: 1080</h4>
+  </div>
+
+<!--41 -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_rose_2016_S_M_L_XL_50grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Цвет Розы и на Размеры: S-M-L-XL -> Цена - 50грн
+    <br>
+    code: 2016
+			"><img src="assets/Women_underwear_rose_2016_S_M_L_XL_50grn.png" alt="photo"/></a>
+    <h3>50 грн</h3>
+    <h4>code: 2016</h4>
+  </div>
+
+<!--42 -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_black_1078_M_L_100grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Черный Цвет и на Размеры: M-L -> Цена - 100грн
+    <br>
+    code: 1078
+			"><img src="assets/Women_underwear_black_1078_M_L_100grn.png" alt="photo"/></a>
+    <h3>100 грн</h3>
+    <h4>code: 1078</h4>
+  </div>
+
+<!--43 -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_dark_grey_1084_S_M_L_XL_100grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: S-M-L-XL -> Цена - 100грн
+    <br>
+    code: 1084
+			"><img src="assets/Women_underwear_dark_grey_1084_S_M_L_XL_100grn.png" alt="photo"/></a>
+    <h3>100 грн</h3>
+    <h4>code: 1084</h4>
+  </div>
+
+<!--44 -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_black_bright_blue_grey_1084_S_M_L_XL_90grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Чёрный, Ярко-синий и Серый Цвет и на Размеры: S-M-L-XL -> Цена - 90грн
+    <br>
+    code: 1094
+			"><img src="assets/Women_underwear_black_bright_blue_grey_black_1084_S_M_L_XL_90grn.png" alt="photo"/></a>
+    <h3>90 грн</h3>
+    <h4>code: 1094</h4>
+  </div>
+
+<!--45 -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_bright__11184_M_L_30grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 30грн
+    <br>
+    code: 11184
+			"><img src="assets/Women_underwear_11184_M_L_30grn.png" alt="photo"/></a>
+    <h3>30 грн</h3>
+    <h4>code: 11184</h4>
+  </div>
+
+<!--46 -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_bright_blue__black_11187_S_M_L_XL_50grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: S-M-L-XL -> Цена - 50грн
+    <br>
+    code: 11187
+			"><img src="assets/Women_underwear_bright_blue__black_11187_S_M_L_XL_50grn.png" alt="photo"/></a>
+    <h3>50 грн</h3>
+    <h4>code: 11187</h4>
+  </div>
+
+<!--47 -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_bright_blue__black_11191_S_M_L_XL_50grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: S-M-L-XL -> Цена - 50грн
+    <br>
+    code: 11191
+			"><img src="assets/Women_underwear_bright_blue__black_11191_S_M_L_XL_50grn.png" alt="photo"/></a>
+    <h3>50 грн</h3>
+    <h4>code: 11191</h4>
+  </div>
+
+<!--48 -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_bright_blue__black_11191_M_L_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 50грн
+    <br>
+    code: 11193
+			"><img src="assets/Women_underwear_bright_blue__black_11191_M_L_35grn.png" alt="photo"/></a>
+    <h3>35 грн</h3>
+    <h4>code: 11193</h4>
+  </div>2313
+
+<!--49 -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_bright_blue__black_11265_M_L_40grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 40грн
+    <br>
+    code: 11265
+			"><img src="assets/Women_underwear_bright_blue__black_11265_M_L_40grn.png" alt="photo"/></a>
+    <h3>40 грн</h3>
+    <h4>code: 11265</h4>
+  </div>
+
+<!--50 -->
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_bright_blue__black_4475_M_L_S_M_L_2XXL_60grn.png" data-fancybox data-caption="
+    На Серый Цвет и на Размеры: M-L -> Цена - 60грн
+    <br>
+    code: 4475
+			"><img src="assets/Women_underwear_bright_blue__black_4475_S_M_L_2XXL_60grn.png" alt="photo"/></a>
+    <h3>60 грн</h3>
+    <h4>code: 4475</h4>
+  </div>
 
 </div>
 
