--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1638,8 +1638,9 @@ table {
   margin-bottom: 10px;
 }
 
-.men_underwear{
+.women_men_underwear{
   height: 230px;
+  border: 2px solid transparent;
 }
 
 women_t_shirts{
