--- a/app/views/static_pages/womens_underwear.html.erb
+++ b/app/views/static_pages/womens_underwear.html.erb
@@ -11,7 +11,7 @@
 <div class="catalog">
 
   <!--1-->
-  <div class="men_underwear">
+  <div class="men_underwear ">
     <a href="assets/Women_underwear_11255_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: L-M -> Цена - 25грн
     <br>
@@ -61,7 +61,7 @@
     <br>
     code: 11260
 			"><img src="assets/Women_underwear_11260_M_L_30grn.png" alt="photo"/></a>
-    <h3>40 грн</h3>
+    <h3>30 грн</h3>
     <h4>code: 11260</h4>
   </div>
 
@@ -71,7 +71,7 @@
     На Размеры: M-L -> Цена - 40грн
     <br>
     code: 11265
-			"><img src="assets/Women_underwear_11265_L_M_40grn.png" alt="photo"/></a>
+			"><img src="assets/Women_underwear_11265_M_L_40grn.png" alt="photo"/></a>
     <h3>40 грн</h3>
     <h4>code: 11265</h4>
   </div>
@@ -81,8 +81,8 @@
     <a href="assets/Women_underwear_11282_L_M _30grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: M-L -> Цена - 30грн
     <br>
-    code: 11265
-			"><img src="assets/Women_underwear_11282_L_M_30grn.png" alt="photo"/></a>
+    code: 11282
+			"><img src="assets/Women_underwear_11282_L_M _30grn.png" alt="photo"/></a>
     <h3>30 грн</h3>
     <h4>code: 11282</h4>
   </div>
@@ -93,7 +93,7 @@
     На Размеры: M-L -> Цена - 30грн
     <br>
     code: 11294
-			"><img src="assets/Women_underwear_11294_L_M_30grn.png" alt="photo"/></a>
+			"><img src="assets/Women_underwear_11294_L_M _30grn.png" alt="photo"/></a>
     <h3>30 грн</h3>
     <h4>code: 11294</h4>
   </div>
@@ -132,7 +132,7 @@
   </div>
 
 <!--12  -->
-  <div class="men_underwear">
+  <div class="men_underwear ">
     <a href="assets/Women_underwear_2080_black_S_M_L_XL_25grn.png" data-fancybox="gallery" data-fancybox="" data-caption="
     На Черный Цвет и на Размеры: S-M-L-XL -> Цена - 25грн
     <br>
@@ -144,7 +144,7 @@
 
 <!--13  -->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_2313_white_S_M_L_XL_28grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="assets/Women_underwear_2313_white_S_XL_28grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Белый Цвет и на Размеры: S-M-L-XL -> Цена - 28грн
     <br>
     code: 2313
@@ -154,37 +154,37 @@
   </div>
 
 <!--14-->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_4405_Bright_blue_S_M_L_XL_75grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Ярко Синий Цвет и на Размеры: S-M-L-XL -> Цена - 75грн
-    <br>
-    code: 4405
-			"><img src="assets/Women_underwear_4405_Bright_blue_S_XL_75grn.png" alt="photo"/></a>
-    <h3>75 грн</h3>
-    <h4>code: 4405</h4>
-  </div>
+  <!--<div class="men_underwear">-->
+    <!--<a href="assets/Women_underwear_4405_Bright_blue_S_M_L_XL_90grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
+    <!--На Ярко Синий Цвет и на Размеры: S-M-L-XL -> Цена - 90грн-->
+    <!--<br>-->
+    <!--code: 4405-->
+			<!--"><img src="assets/Women_underwear_4405_Bright_blue_S_XL_90grn.png" alt="photo"/></a>-->
+    <!--<h3>90 грн</h3>-->
+    <!--<h4>code: 4405</h4>-->
+  <!--</div>-->
 
 <!--15-->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_4406_black_S_M_L_XL_75grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Черный Цвет и на Размеры: S-M-L-XL -> Цена - 70грн
-    <br>
-    code: 4406
-			"><img src="assets/Women_underwear_4406_black_S_XL_75grn.png" alt="photo"/></a>
-    <h3>70 грн</h3>
-    <h4>code: 4406</h4>
-  </div>
+  <!--<div class="men_underwear">-->
+    <!--<a href="assets/Women_underwear_4406_black_S_M_L_XL_75grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
+    <!--На Черный Цвет и на Размеры: S-M-L-XL -> Цена - 70грн-->
+    <!--<br>-->
+    <!--code: 4406-->
+			<!--"><img src="assets/Women_underwear_4406_black_S_XL_75grn.png" alt="photo"/></a>-->
+    <!--<h3>70 грн</h3>-->
+    <!--<h4>code: 4406</h4>-->
+  <!--</div>-->
 
 <!--16  -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_1113_grey_S_M_L_XL_90grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Серый Цвет и на Размеры: S-M-L-XL -> Цена - 70грн
-    <br>
-    code: 1113
-			"><img src="assets/Women_underwear_1113_grey_S_XL_90grn.png" alt="photo"/></a>
-    <h3>90 грн</h3>
-    <h4>code: 1113</h4>
-  </div>
+  <!--<div class="men_underwear">-->
+    <!--<a href="assets/Women_underwear_1113_grey_S_M_L_XL_90grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
+    <!--На Серый Цвет и на Размеры: S-M-L-XL -> Цена - 70грн-->
+    <!--<br>-->
+    <!--code: 1113-->
+			<!--"><img src="assets/Women_underwear_1113_grey_S_XL_90grn.png" alt="photo"/></a>-->
+    <!--<h3>90 грн</h3>-->
+    <!--<h4>code: 1113</h4>-->
+  <!--</div>-->
 
 <!--17  -->
   <div class="men_underwear">
@@ -254,13 +254,13 @@
 
 <!--23-->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_1119_L_M_100grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Тёмно Синий Цвет и на Размеры: S-M-L-XL -> Цена - 45грн
+    <a href="assets/Women_underwear_black_blue_1119_L_M_100grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Тёмно Синий Цвет и на Размеры: S-M-L-XL -> Цена - 100грн
     <br>
-    code: 1119
+    code: 11196
 			"><img src="assets/Women_underwear_black_blue_1119_L_M_100grn.png" alt="photo"/></a>
     <h3>100 грн</h3>
-    <h4>code: 1119</h4>
+    <h4>code: 11196</h4>
   </div>
 
 <!--24  -->
@@ -270,20 +270,20 @@
     <br>
     code: 11223
 			"><img src="assets/Women_underwear_11223_L_M_25grn.png" alt="photo"/></a>
-    <h3>100 грн</h3>
+    <h3>25 грн</h3>
     <h4>code: 11223</h4>
   </div>
 
 <!--25  -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_11224_L_M_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Размеры: M-L -> Цена - 25грн
-    <br>
-    code: 11223
-			"><img src="assets/Women_underwear_11224_L_M_25grn.png" alt="photo"/></a>
-    <h3>100 грн</h3>
-    <h4>code: 11223</h4>
-  </div>
+  <!--<div class="men_underwear">-->
+    <!--<a href="assets/Women_underwear_11224_L_M_25grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
+    <!--На Размеры: M-L -> Цена - 25грн-->
+    <!--<br>-->
+    <!--code: 11224-->
+			<!--"><img src="assets/Women_underwear_11224_L_M_25grn.png" alt="photo"/></a>-->
+    <!--<h3>100 грн</h3>-->
+    <!--<h4>code: 11224</h4>-->
+  <!--</div>-->
 
 <!--26  -->
   <div class="men_underwear">
