--- a/app/views/static_pages/women_t_shirts.html.erb
+++ b/app/views/static_pages/women_t_shirts.html.erb
@@ -28,7 +28,8 @@
     На Бордовый и Розовые Цвета и На Размеры: S-M-L-XL -> Цена - 90грн
     <br>
     code: 2015
-			"><img src="assets/female_T-shirt1_2015_burgundy_S_M_L_XL_90__Red_80__Pink_90grn.png" alt="photo"/></a>
+			"><img
+  src="assets/female_T-shirt1_2015_burgundy_S_M_L_XL_90__Red_80__Pink_90grn.png" alt="photo"/></a>
     <h3>80 грн</h3>
     <h4>code: 2015</h4>
   </div>
