--- a/app/views/static_pages/women_t_shirts.html.erb
+++ b/app/views/static_pages/women_t_shirts.html.erb
@@ -10,80 +10,79 @@
 <br>
 <div class="catalog">
   <div class="women_t_shirts">
-    <a href="assets/female_T-shirt1_2011_white_S_M_L_XL_80__2XXL_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2011_white_S_M_L_XL_80__2XXL_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Белый Цвет и На Размеры: S-M-L-XL -> Цена - 85грн
     <br>
     На Белый Цвет и На Размер: 2XXL -> Цена - 85грн
     <br>
     code: 2011
-			"><img src="assets/female_T-shirt1_2011_white_S_M_L_XL_80__2XXL_85grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2011_white_S_M_L_XL_80__2XXL_85grn.png" alt="photo"/></a>
     <h3>80 грн</h3>
     <h4>code: 2011</h4>
   </div>
 
   <div class="women_t_shirts">
-    <a href="assets/female_T-shirt1_2015_burgundy_S_M_L_XL_90__Red_80__Pink_90grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2015_burgundy_S_M_L_XL_90__Red_80__Pink_90grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Красный Цвет и На Размеры: S-M-L-XL -> Цена - 80грн
     <br>
     На Бордовый и Розовые Цвета и На Размеры: S-M-L-XL -> Цена - 90грн
     <br>
     code: 2015
-			"><img
-  src="assets/female_T-shirt1_2015_burgundy_S_M_L_XL_90__Red_80__Pink_90grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2015_burgundy_S_M_L_XL_90__Red_80__Pink_90grn.png" alt="photo"/></a>
     <h3>80 грн</h3>
     <h4>code: 2015</h4>
   </div>
 
   <div class="women_t_shirts">
-    <a href="assets/female_T-shirt1_2016_Red_S_M_L_XL_80grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2016_Red_S_M_L_XL_80grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Красный Цвет и На Размеры: S-M-L-XL -> Цена - 80грн
     <br>
     code: 2016
-			"><img src="assets/female_T-shirt1_2016_Red_S_M_L_XL_80grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2016_Red_S_M_L_XL_80grn.png" alt="photo"/></a>
     <h3>80 грн</h3>
     <h4>code: 2016</h4>
   </div>
 
   <div class="women_t_shirts">
-    <a href="assets/female_T-shirt1_2018_White_3XL_100__2XXL_95grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2018_White_3XL_100__2XXL_95grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Белый Цвет и На Размер: 2XXL -> Цена - 95грн
     <br>
     На Белый Цвет и На Размер: 3XL -> Цена - 100грн
     <br>
     code: 2018
-			"><img src="assets/female_T-shirt1_2018_White_3XL_100__2XXL_95grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2018_White_3XL_100__2XXL_95grn.png" alt="photo"/></a>
     <h3>95 грн</h3>
     <h4>code: 2018</h4>
   </div>
 
   <div class="women_t_shirts">
-    <a href="assets/female_T-shirt1_2037_White_3XL_90__2XXL_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2037_White_3XL_90__2XXL_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
      На Белый Цвет и На Размер: 2XXL -> Цена - 85грн
     <br>
      На Белый Цвет и На Размер: 3XL -> Цена - 90грн
     <br>
     code: 2037
-    "><img src="assets/female_T-shirt1_2037_White_3XL_90__2XXL_85grn.png" alt="photo"/></a>
+    "><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2037_White_3XL_90__2XXL_85grn.png" alt="photo"/></a>
     <h3>85 грн</h3>
     <h4>code: 3037</h4>
   </div>
 
   <div class="women_t_shirts">
-    <a href="assets/female_T-shirt1_2118_Black_Beige_S_M_L_XL_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2118_Black_Beige_S_M_L_XL_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Черный и Бежевые Цвета и На Размеры: S-M-L-XL -> Цена - 85грн
     <br>
     code: 2118
-    "><img src="assets/female_T-shirt1_2118_Black_Beige_S_M_L_XL_85grn.png" alt="photo"/></a>
+    "><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2118_Black_Beige_S_M_L_XL_85grn.png" alt="photo"/></a>
     <h3>85 грн</h3>
     <h4>code: 2118</h4>
   </div>
 
   <div class="women_t_shirts">
-    <a href="assets/female_T-shirt1_2127_White_S_M_L_XL_95grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2127_White_S_M_L_XL_95grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Белый Цвет и На Размеры: S-M-L-XL -> Цена - 95грн
     <br>
     code: 2127
-    "><img src="assets/female_T-shirt1_2127_White_S_M_L_XL_95grn.png" alt="photo"/></a>
+    "><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt1_2127_White_S_M_L_XL_95grn.png  " alt="photo"/></a>
     <h3>95 грн</h3>
     <h4>code: 2127</h4>
   </div>
