change women ad men underwnt

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -173,33 +173,30 @@
 <br>
 <div class="catalog">
   <div class="men_underwear">
-    <a href="assets/Men1_underwear_4476_black_Dark blue_Burgundy_rose_Purple_Bright blue__Gray_Dark blue_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men1_underwear_4476_black_Dark%20blue_Burgundy_rose_Purple_Bright%20blue__Gray_Dark%20blue_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
     Цена - 85грн на цвета: Черный, Темно-синий, Бордовый, Роза, Фиолетовый, Ярко-синий, Серый, Тёмно-синий <br> code: 4476
-			"><img src="assets/Men1_underwear_4476_black_Dark blue_Burgundy_rose_Purple_Bright blue__Gray_Dark blue_85grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men1_underwear_4476_black_Dark%20blue_Burgundy_rose_Purple_Bright%20blue__Gray_Dark%20blue_85grn.png" alt="photo"/></a>
     <h3>85 грн</h3>
     <h4>code: 4476</h4>
   </div>
-
   <div class="men_underwear">
-    <a href="assets/Men2_underwear_4480_standart_80grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men2_underwear_4480_standart_80grn.png" data-fancybox="gallery" data-fancybox data-caption="
      Цена - 80грн, цвет: стандартный<br> code: 4480
-			"><img src="assets/Men2_underwear_4480_standart_80grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men2_underwear_4480_standart_80grn.png" alt="photo"/></a>
     <h3>80 грн</h3>
     <h4>code: 4480</h4>
   </div>
-
   <div class="men_underwear">
-    <a href="assets/Men_underwear_4413_standart_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_4413_standart_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
     Цена - 80грн, цвет: стандартный<br> code: 4480
-			"><img src="assets/Men_underwear_4413_standart_120grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_4413_standart_120grn.png" alt="photo"/></a>
     <h3>120 грн</h3>
     <h4>code: 4413</h4>
   </div>
-
   <div class="men_underwear">
-    <a href="assets/Men_underwear_4416_dark blue_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_4416_dark blue_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
     Цена - 85грн, цвет: Темно Синий<br> code: 4416
-			"><img src="assets/Men_underwear_4416_dark blue_85grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_4416_dark blue_85grn.png" alt="photo"/></a>
     <h3>85 грн</h3>
     <h4>code: 4416</h4>
   </div>
@@ -212,41 +209,41 @@
 <br>
 <div class="catalog">
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11255_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11255_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: L-M -> Цена - 25грн
     <br>
     code: 11255
-			"><img src="assets/Women_underwear_11255_25grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11255_25grn.png" alt="photo"/></a>
     <h3>25 грн</h3>
     <h4>code: 11255</h4>
   </div>
 
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11257_L_M_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11257_L_M_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: L-M -> Цена - 35грн
     <br>
     code: 11257
-			"><img src="assets/Women_underwear_11257_L_M_35grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11257_L_M_35grn.png" alt="photo"/></a>
     <h3>35 грн</h3>
     <h4>code: 11257</h4>
   </div>
 
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11258_L_M_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11258_L_M_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: L-M -> Цена - 35грн
     <br>
     code: 11258
-			"><img src="assets/Women_underwear_11258_L_M_35grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11258_L_M_35grn.png" alt="photo"/></a>
     <h3>35 грн</h3>
     <h4>code: 11258</h4>
   </div>
 
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11259_S_M_L_XL_40grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11259_S_M_L_XL_40grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: S-M-L-XL -> Цена - 40грн
     <br>
     code: 11259
-			"><img src="assets/Women_underwear_11259_S_M_L_XL_40grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11259_S_M_L_XL_40grn.png" alt="photo"/></a>
     <h3>40 грн</h3>
     <h4>code: 11259</h4>
   </div>
