--- a/app/views/static_pages/men.html.erb
+++ b/app/views/static_pages/men.html.erb
@@ -10,54 +10,54 @@
 <br>
 <div class="catalog">
   <div class="men_underwear">
-    <a href="assets/Men1_underwear_4476_black_Dark blue_Burgundy_rose_Purple_Bright blue__Gray_Dark blue_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men1_underwear_4476_black_Dark%20blue_Burgundy_rose_Purple_Bright%20blue__Gray_Dark%20blue_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
     Цена - 85грн на цвета: Черный, Темно-синий, Бордовый, Роза, Фиолетовый, Ярко-синий, Серый, Тёмно-синий <br> code: 4476
-			"><img src="assets/Men1_underwear_4476_black_Dark blue_Burgundy_rose_Purple_Bright blue__Gray_Dark blue_85grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men1_underwear_4476_black_Dark%20blue_Burgundy_rose_Purple_Bright%20blue__Gray_Dark%20blue_85grn.png" alt="photo"/></a>
     <h3>85 грн</h3>
     <h4>code: 4476</h4>
   </div>
   <div class="men_underwear">
-    <a href="assets/Men2_underwear_4480_standart_80grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men2_underwear_4480_standart_80grn.png" data-fancybox="gallery" data-fancybox data-caption="
      Цена - 80грн, цвет: стандартный<br> code: 4480
-			"><img src="assets/Men2_underwear_4480_standart_80grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men2_underwear_4480_standart_80grn.png" alt="photo"/></a>
     <h3>80 грн</h3>
     <h4>code: 4480</h4>
   </div>
   <div class="men_underwear">
-    <a href="assets/Men_underwear_4413_standart_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_4413_standart_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
     Цена - 80грн, цвет: стандартный<br> code: 4480
-			"><img src="assets/Men_underwear_4413_standart_120grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_4413_standart_120grn.png" alt="photo"/></a>
     <h3>120 грн</h3>
     <h4>code: 4413</h4>
   </div>
   <div class="men_underwear">
-    <a href="assets/Men_underwear_4416_dark blue_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_4416_dark blue_85grn.png" data-fancybox="gallery" data-fancybox data-caption="
     Цена - 85грн, цвет: Темно Синий<br> code: 4416
-			"><img src="assets/Men_underwear_4416_dark blue_85grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_4416_dark blue_85grn.png" alt="photo"/></a>
     <h3>85 грн</h3>
     <h4>code: 4416</h4>
   </div>
 
   <div class="men_underwear">
-  <a href="assets/Men_underwear_4457_dark blue_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
+  <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_4457_dark blue_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
   Цена - 120грн, цвет: стандартный<br> code: 4457
-  "><img src="assets/Men_underwear_4457_dark blue_120grn.png" alt="photo"/></a>
+  "><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_4457_dark blue_120grn.png" alt="photo"/></a>
   <h3>120 грн</h3>
     <h4>code: 4457</h4>
   </div>
 
   <div class="men_underwear">
-    <a href="assets/Men_underwear_4458_red_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_4458_red_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
   Цена - 120грн, цвет: красный<br> code: 4458
-  "><img src="assets/Men_underwear_4458_red_120grn.png" alt="photo"/></a>
+  "><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_4458_red_120grn.png" alt="photo"/></a>
     <h3>120 грн</h3>
     <h4>code: 4458</h4>
   </div>
 
   <div class="men_underwear">
-    <a href="assets/Men_underwear_4459_dark blue_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_4459_dark blue_120grn.png" data-fancybox="gallery" data-fancybox data-caption="
   Цена - 120грн, цвет: Тёмно синий<br> code: 4459
-  "><img src="assets/Men_underwear_4459_dark blue_120grn.png" alt="photo"/></a>
+  "><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Men_underwear/Men_underwear_4459_dark blue_120grn.png" alt="photo"/></a>
     <h3>120 грн</h3>
     <h4>code: 4459</h4>
   </div>
