--- a/app/views/static_pages/men.html.erb
+++ b/app/views/static_pages/men.html.erb
@@ -61,6 +61,86 @@
     <h3>120 грн</h3>
     <h4>code: 4459</h4>
   </div>
+
+
+  <!--38 -->
+  <!--<div class="men_underwear">-->
+    <!--<a href="assets/Men_underwear_grey_black_1056_S_M_L_XL_64grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
+    <!--На Серый и Черный Цвет и на Размеры: S-M-L-XL -> Цена - 50грн-->
+    <!--<br>-->
+    <!--code: 1056-->
+			<!--"><img src="assets/Men_underwear_grey_black_1056_S_M_L_XL_64grn.png" alt="photo"/></a>-->
+    <!--<h3>50 грн</h3>-->
+    <!--<h4>code: 1056</h4>-->
+  <!--</div>-->
+
+  <!--&lt;!&ndash;39 &ndash;&gt;-->
+  <!--<div class="men_underwear">-->
+    <!--<a href="assets/Men_underwear_black_1078_M_L_100grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
+    <!--На Черный Цвет и на Размеры: M-L -> Цена - 100грн-->
+    <!--<br>-->
+    <!--code: 1078-->
+			<!--"><img src="assets/Men_underwear_black_1078_M_L_100grn.png" alt="photo"/></a>-->
+    <!--<h3>100 грн</h3>-->
+    <!--<h4>code: 1078</h4>-->
+  <!--</div>-->
+
+  <!--&lt;!&ndash;40 &ndash;&gt;-->
+  <!--<div class="men_underwear">-->
+    <!--<a href="assets/Men_underwear_dark_blue_1080_S_M_L_XL_100grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
+    <!--На Темно-синий Цвет и на Размеры: S-M-L-XL -> Цена - 100грн-->
+    <!--<br>-->
+    <!--code: 1080-->
+			<!--"><img src="assets/Men_underwear_dark_blue_1080_S_M_L_XL_100grn.png" alt="photo"/></a>-->
+    <!--<h3>100 грн</h3>-->
+    <!--<h4>code: 1080</h4>-->
+  <!--</div>-->
+
+
+  <!--&lt;!&ndash;42 &ndash;&gt;-->
+  <!--<div class="men_underwear">-->
+    <!--<a href="assets/Men_underwear_black_1078_M_L_100grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
+    <!--На Черный Цвет и на Размеры: M-L -> Цена - 100грн-->
+    <!--<br>-->
+    <!--code: 1078-->
+			<!--"><img src="assets/Men_underwear_black_1078_M_L_100grn.png" alt="photo"/></a>-->
+    <!--<h3>100 грн</h3>-->
+    <!--<h4>code: 1078</h4>-->
+  <!--</div>-->
+
+  <!--&lt;!&ndash;43 &ndash;&gt;-->
+  <!--<div class="men_underwear">-->
+    <!--<a href="assets/Men_underwear_dark_grey_1084_S_M_L_XL_100grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
+    <!--На Размеры: S-M-L-XL -> Цена - 100грн-->
+    <!--<br>-->
+    <!--code: 1084-->
+			<!--"><img src="assets/Men_underwear_dark_grey_1084_S_M_L_XL_100grn.png" alt="photo"/></a>-->
+    <!--<h3>100 грн</h3>-->
+    <!--<h4>code: 1084</h4>-->
+  <!--</div>-->
+
+  <!--&lt;!&ndash;44 &ndash;&gt;-->
+  <!--<div class="men_underwear">-->
+    <!--<a href="assets/Men_underwear_black_bright_blue_grey_1084_S_M_L_XL_90grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
+    <!--На Чёрный, Ярко-синий и Серый Цвет и на Размеры: S-M-L-XL -> Цена - 90грн-->
+    <!--<br>-->
+    <!--code: 1094-->
+			<!--"><img src="assets/Men_underwear_black_bright_blue_grey_black_1084_S_M_L_XL_90grn.png" alt="photo"/></a>-->
+    <!--<h3>90 грн</h3>-->
+    <!--<h4>code: 1094</h4>-->
+  <!--</div>-->
+
+  <!--&lt;!&ndash;50 &ndash;&gt;-->
+  <!--<div class="men_underwear">-->
+    <!--<a href="assets/Men_underwear_grey_4475_M_L_S_M_L_2XXL_60grn.png" data-fancybox data-caption="-->
+    <!--На Серый Цвет и на Размеры: M-L -> Цена - 60грн-->
+    <!--<br>-->
+    <!--code: 4475-->
+			<!--"><img src="assets/Men_underwear_grey_4475_M_L_S_M_L_2XXL_60grn.png" alt="photo"/></a>-->
+    <!--<h3>60 грн</h3>-->
+    <!--<h4>code: 4475</h4>-->
+  </div>
+
 </div>
 
 <!--<table>-->
