--- a/app/views/static_pages/women_t_shirts.html.erb
+++ b/app/views/static_pages/women_t_shirts.html.erb
@@ -87,6 +87,39 @@
     <h4>code: 2127</h4>
   </div>
 
+  <!--35  -->
+  <div class="women_t_shirts">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt_2128_white_black_2128_S_M_L_XL_65grn.png " data-fancybox="gallery" data-fancybox data-caption="
+    На Белый и Черный Цвет, а также на Размеры: S-M-L-XL -> Цена - 65грн
+    <br>
+    code: 2128
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt_2128_white_black_2128_S_M_L_XL_65grn.png" alt="photo"/></a>
+    <h3>65 грн</h3>
+    <h4>code: 2128</h4>
+  </div>
+
+  <!--36  -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt_grey_2131_S_M_L_XL_73grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Серый Цвет и на Размеры: S-M-L-XL -> Цена - 73грн
+    <br>
+    code: 2131
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt_grey_2131_S_M_L_XL_73grn.png" alt="photo"/></a>
+    <h3>73 грн</h3>
+    <h4>code: 2131</h4>
+  </div>
+
+  <!--37  -->
+  <div class="men_underwear">
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt_grey_8049_S_M_L_XL_64grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Серый Цвет и на Размеры: S-M-L-XL -> Цена - 64грн
+    <br>
+    code: 8049
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_t_shirts/female_T-shirt_grey_8049_S_M_L_XL_64grn.png" alt="photo"/></a>
+    <h3>64 грн</h3>
+    <h4>code: 8049</h4>
+  </div>
+
 </div>
 
 <br>
