--- a/app/views/static_pages/womens_underwear.html.erb
+++ b/app/views/static_pages/womens_underwear.html.erb
@@ -309,256 +309,138 @@
 
 <!--28  -->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11235_S_M_L_XL_50grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11235_S_M_L_XL_50grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: S-M-L-XL -> Цена - 50грн
     <br>
     code: 11235
-			"><img src="assets/Women_underwear_11235_S_M_L_XL_50grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11235_S_M_L_XL_50grn.png" alt="photo"/></a>
     <h3>50 грн</h3>
     <h4>code: 11235</h4>
   </div>
 
 <!--29  -->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11235_M_L_30grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11236_M_L_30grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: M-L -> Цена - 30грн
     <br>
     code: 11236
-			"><img src="assets/Women_underwear_11235_M_L_30grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11236_M_L_30grn.png" alt="photo"/></a>
     <h3>30 грн</h3>
     <h4>code: 11236</h4>
   </div>
 
 <!--30  -->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11235_M_L_30grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11237_M_L_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: M-L -> Цена - 35грн
     <br>
     code: 11237
-			"><img src="assets/Women_underwear_11235_M_L_30grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11237_M_L_35grn.png" alt="photo"/></a>
     <h3>35 грн</h3>
     <h4>code: 11237</h4>
   </div>
 
 <!--31  -->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11235_S_M_L_XL_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11243_S_M_L_XL_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: S-M-L-XL -> Цена - 35грн
     <br>
     code: 11243
-			"><img src="assets/Women_underwear_11235_S_M_L_XL_35grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11243_S_M_L_XL_35grn.png" alt="photo"/></a>
     <h3>35 грн</h3>
     <h4>code: 11243</h4>
   </div>
 
 <!--32  -->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11245_M_L_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11245_M_L_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: M-L -> Цена - 35грн
     <br>
     code: 11245
-			"><img src="assets/Women_underwear_11245_M_L_25grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11245_M_L_25grn.png" alt="photo"/></a>
     <h3>35 грн</h3>
     <h4>code: 11245</h4>
   </div>
 
 <!--33  -->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_11249_M_L_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Размеры: M-L -> Цена - 35грн
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11249_M_L_25grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 25грн
     <br>
     code: 11249
-			"><img src="assets/Women_underwear_11249_M_L_25grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11249_M_L_25grn.png" alt="photo"/></a>
     <h3>25 грн</h3>
     <h4>code: 11249</h4>
   </div>
 
-<!--34  -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_white_2127_S_M_L_XL_75grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Белый Цвет и на Размеры: S-M-L-XL -> Цена - 75грн
-    <br>
-    code: 2127
-			"><img src="assets/Women_underwear_white_2127_S_M_L_XL_75grn.png" alt="photo"/></a>
-    <h3>75 грн</h3>
-    <h4>code: 2127</h4>
-  </div>
+<!--&lt;!&ndash;41 &ndash;&gt;-->
+  <!--<div class="men_underwear">-->
+    <!--<a href="assets/Women_underwear_rose_2016_S_M_L_XL_50grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
+    <!--На Цвет Розы и на Размеры: S-M-L-XL -> Цена - 50грн-->
+    <!--<br>-->
+    <!--code: 2016-->
+			<!--"><img src="assets/Women_underwear_rose_2016_S_M_L_XL_50grn.png" alt="photo"/></a>-->
+    <!--<h3>50 грн</h3>-->
+    <!--<h4>code: 2016</h4>-->
+  <!--</div>-->
 
-<!--35  -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_white_black_2128_S_M_L_XL_65grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Белый и Черный Цвет, а также на Размеры: S-M-L-XL -> Цена - 65грн
-    <br>
-    code: 2128
-			"><img src="assets/Women_underwear_white_black_2128_S_M_L_XL_65grn.png" alt="photo"/></a>
-    <h3>65 грн</h3>
-    <h4>code: 2128</h4>
-  </div>
 
-<!--36  -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_grey_2131_S_M_L_XL_73grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Серый Цвет и на Размеры: S-M-L-XL -> Цена - 73грн
-    <br>
-    code: 2131
-			"><img src="assets/Women_underwear_grey_2131_S_M_L_XL_73grn.png" alt="photo"/></a>
-    <h3>73 грн</h3>
-    <h4>code: 2131</h4>
-  </div>
-
-<!--37  -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_grey_8049_S_M_L_XL_64grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Серый Цвет и на Размеры: S-M-L-XL -> Цена - 64грн
-    <br>
-    code: 8049
-			"><img src="assets/Women_underwear_grey_8049_S_M_L_XL_64grn.png" alt="photo"/></a>
-    <h3>64 грн</h3>
-    <h4>code: 8049</h4>
-  </div>
-
-<!--38 -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_grey_black_1056_S_M_L_XL_64grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Серый и Черный Цвет и на Размеры: S-M-L-XL -> Цена - 50грн
-    <br>
-    code: 1056
-			"><img src="assets/Women_underwear_grey_black_1056_S_M_L_XL_64grn.png" alt="photo"/></a>
-    <h3>50 грн</h3>
-    <h4>code: 1056</h4>
-  </div>
-
-<!--39 -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_black_1078_S_M_L_XL_100grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Черный Цвет и на Размеры: S-M-L-XL -> Цена - 100грн
-    <br>
-    code: 1078
-			"><img src="assets/Women_underwear_black_1078_S_M_L_XL_100grn.png" alt="photo"/></a>
-    <h3>50 грн</h3>
-    <h4>code: 1078</h4>
-  </div>
-
-<!--40 -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_dark_blue_1080_S_M_L_XL_100grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Темно-синий Цвет и на Размеры: S-M-L-XL -> Цена - 100грн
-    <br>
-    code: 1080
-			"><img src="assets/Women_underwear_dark_blue_1080_S_M_L_XL_100grn.png" alt="photo"/></a>
-    <h3>50 грн</h3>
-    <h4>code: 1080</h4>
-  </div>
-
-<!--41 -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_rose_2016_S_M_L_XL_50grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Цвет Розы и на Размеры: S-M-L-XL -> Цена - 50грн
-    <br>
-    code: 2016
-			"><img src="assets/Women_underwear_rose_2016_S_M_L_XL_50grn.png" alt="photo"/></a>
-    <h3>50 грн</h3>
-    <h4>code: 2016</h4>
-  </div>
-
-<!--42 -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_black_1078_M_L_100grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Черный Цвет и на Размеры: M-L -> Цена - 100грн
-    <br>
-    code: 1078
-			"><img src="assets/Women_underwear_black_1078_M_L_100grn.png" alt="photo"/></a>
-    <h3>100 грн</h3>
-    <h4>code: 1078</h4>
-  </div>
-
-<!--43 -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_dark_grey_1084_S_M_L_XL_100grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Размеры: S-M-L-XL -> Цена - 100грн
-    <br>
-    code: 1084
-			"><img src="assets/Women_underwear_dark_grey_1084_S_M_L_XL_100grn.png" alt="photo"/></a>
-    <h3>100 грн</h3>
-    <h4>code: 1084</h4>
-  </div>
-
-<!--44 -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_black_bright_blue_grey_1084_S_M_L_XL_90grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Чёрный, Ярко-синий и Серый Цвет и на Размеры: S-M-L-XL -> Цена - 90грн
-    <br>
-    code: 1094
-			"><img src="assets/Women_underwear_black_bright_blue_grey_black_1084_S_M_L_XL_90grn.png" alt="photo"/></a>
-    <h3>90 грн</h3>
-    <h4>code: 1094</h4>
-  </div>
 
 <!--45 -->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_bright__11184_M_L_30grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11184_M_L_30grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: M-L -> Цена - 30грн
     <br>
     code: 11184
-			"><img src="assets/Women_underwear_11184_M_L_30grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11184_M_L_30grn.png" alt="photo"/></a>
     <h3>30 грн</h3>
     <h4>code: 11184</h4>
   </div>
 
 <!--46 -->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_bright_blue__black_11187_S_M_L_XL_50grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_bright_blue__black_11187_S_M_L_XL_50grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: S-M-L-XL -> Цена - 50грн
     <br>
     code: 11187
-			"><img src="assets/Women_underwear_bright_blue__black_11187_S_M_L_XL_50grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_bright_blue__black_11187_S_M_L_XL_50grn.png" alt="photo"/></a>
     <h3>50 грн</h3>
     <h4>code: 11187</h4>
   </div>
 
 <!--47 -->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_bright_blue__black_11191_S_M_L_XL_50grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_bright_blue__black_11191_S_M_L_XL_50grn.png" data-fancybox="gallery" data-fancybox data-caption="
     На Размеры: S-M-L-XL -> Цена - 50грн
     <br>
     code: 11191
-			"><img src="assets/Women_underwear_bright_blue__black_11191_S_M_L_XL_50grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_bright_blue__black_11191_S_M_L_XL_50grn.png" alt="photo"/></a>
     <h3>50 грн</h3>
     <h4>code: 11191</h4>
   </div>
 
 <!--48 -->
   <div class="men_underwear">
-    <a href="assets/Women_underwear_bright_blue__black_11191_M_L_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Размеры: M-L -> Цена - 50грн
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11193_M_L_35grn.png" data-fancybox="gallery" data-fancybox data-caption="
+    На Размеры: M-L -> Цена - 35грн
     <br>
     code: 11193
-			"><img src="assets/Women_underwear_bright_blue__black_11191_M_L_35grn.png" alt="photo"/></a>
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Women_underwear/Women_underwear_11193_M_L_35grn.png" alt="photo"/></a>
     <h3>35 грн</h3>
     <h4>code: 11193</h4>
-  </div>2313
-
-<!--49 -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_bright_blue__black_11265_M_L_40grn.png" data-fancybox="gallery" data-fancybox data-caption="
-    На Размеры: M-L -> Цена - 40грн
-    <br>
-    code: 11265
-			"><img src="assets/Women_underwear_bright_blue__black_11265_M_L_40grn.png" alt="photo"/></a>
-    <h3>40 грн</h3>
-    <h4>code: 11265</h4>
   </div>
 
-<!--50 -->
-  <div class="men_underwear">
-    <a href="assets/Women_underwear_bright_blue__black_4475_M_L_S_M_L_2XXL_60grn.png" data-fancybox data-caption="
-    На Серый Цвет и на Размеры: M-L -> Цена - 60грн
-    <br>
-    code: 4475
-			"><img src="assets/Women_underwear_bright_blue__black_4475_S_M_L_2XXL_60grn.png" alt="photo"/></a>
-    <h3>60 грн</h3>
-    <h4>code: 4475</h4>
-  </div>
+<!--&lt;!&ndash;49 &ndash;&gt;-->
+  <!--<div class="men_underwear">-->
+    <!--<a href="assets/Women_underwear_11265_M_L_40grn.png" data-fancybox="gallery" data-fancybox data-caption="-->
+    <!--На Размеры: M-L -> Цена - 40грн-->
+    <!--<br>-->
+    <!--code: 11265-->
+			<!--"><img src="assets/Women_underwear_11265_M_L_40grn.png" alt="photo"/></a>-->
+    <!--<h3>40 грн</h3>-->
+    <!--<h4>code: 11265</h4>-->
+  <!--</div>-->
+
 
 </div>
 
